Add script for hashing directories and optionally loading topostats data or cached result

--- a/picoz-damage-analysis.ipynb
+++ b/picoz-damage-analysis.ipynb
@@ -358,6 +358,123 @@
     "            grain_model_collection.add_grain(grain_model)\n",
     "    return grain_model_collection"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9fbed27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract the grains from the topostats files\n",
+    "\n",
+    "def construct_grains_dictionary_from_topostats_files(\n",
+    "    bbox_padding: int, force_reload: bool = False\n",
+    ") -> GrainModelCollection:\n",
+    "    grain_model_collection = GrainModelCollection(grains={})\n",
+    "    dir_loaded_datasets = dir_results / \"loaded_datasets\"\n",
+    "    assert dir_loaded_datasets.exists(), f\"could not find dataset hash directory at {dir_loaded_datasets}\"\n",
+    "\n",
+    "    # iterate through each topostats image file that remains in the grain stats dataframe and extract the grain data\n",
+    "    # from the topostats files and store them.\n",
+    "    unique_file_folder_combinations = df_grain_stats[[\"image\", \"basename\"]].drop_duplicates()\n",
+    "    print(f\"found {len(unique_file_folder_combinations)} unique topostats files in the grain stats dataframe\")\n",
+    "\n",
+    "    # Split the files by folder\n",
+    "    unique_file_folder_combinations_grouped = unique_file_folder_combinations.groupby(\"basename\")\n",
+    "    print(unique_file_folder_combinations_grouped.groups.keys())\n",
+    "\n",
+    "    for local_folder, group in unique_file_folder_combinations_grouped:\n",
+    "        sample_type = local_folder.replace(\"../all_data/\", \"\")\n",
+    "        print(f\"checking folder {sample_type} with {len(group)} files\")\n",
+    "        print(f\"calculating hashes for topostats files...\")\n",
+    "        file_paths_and_hashes_topostats: dict[Path, str] = {}\n",
+    "        # construct the file paths for each unique combination of image and folder and check if it exists.\n",
+    "        for _, row in group.iterrows():\n",
+    "            filename = row[\"image\"]\n",
+    "            basename = row[\"basename\"]\n",
+    "            # reconstruct the path to the file using the basename, image name and structure of directories.\n",
+    "            dir_topo_file = Path(str(basename).replace(\"../all_data/\", \"\"))\n",
+    "            dir_topo_file = dir_processed_data / dir_topo_file / \"processed\"\n",
+    "            assert dir_topo_file.exists(), f\"could not find folder at {dir_topo_file}\"\n",
+    "            file_topostats = dir_topo_file / f\"{filename}.topostats\"\n",
+    "            assert file_topostats.exists(), f\"could not find topostats file at {file_topostats}\"\n",
+    "\n",
+    "            # calculate the hash of the file\n",
+    "            file_topostats_hash = sha256(file_topostats.read_bytes()).hexdigest()\n",
+    "            file_paths_and_hashes_topostats[file_topostats] = file_topostats_hash\n",
+    "\n",
+    "        # create hash for the folder by combining the hashes of the files in the folder\n",
+    "        combined_hash_string = \"\".join(sorted(file_paths_and_hashes_topostats.values()))\n",
+    "        folder_hash = sha256(combined_hash_string.encode()).hexdigest()\n",
+    "\n",
+    "        # load the previous hash from text file if it exists\n",
+    "        previous_hash_file = dir_results / f\"{local_folder}_hash.txt\"\n",
+    "        previous_hash = None\n",
+    "        if previous_hash_file.exists():\n",
+    "            previous_hash = previous_hash_file.read_text()\n",
+    "\n",
+    "        print(\n",
+    "            f\"folder {sample_type} hash calculated: {folder_hash}. previous hash: {previous_hash} force reload: {force_reload}\"\n",
+    "        )\n",
+    "\n",
+    "        if previous_hash == folder_hash and not force_reload:\n",
+    "            # check if the saved data for this folder exists and if it does, load it instead of loading the data\n",
+    "            # from the topostats files\n",
+    "            file_previous_loaded_data = dir_loaded_datasets / f\"{local_folder}.pkl\"\n",
+    "            if file_previous_loaded_data.exists():\n",
+    "                print(\n",
+    "                    f\"folder {sample_type} has not changed since last load, skipping loading it and using previous saved data\"\n",
+    "                )\n",
+    "                with open(dir_loaded_datasets / f\"{sample_type}.pkl\", \"rb\") as f:\n",
+    "                    grain_model_collection_folder: GrainModelCollection = pickle.load(f)\n",
+    "                    # Combine the grain model collection for this folder with the main grain model collection\n",
+    "                    grain_model_collection = combine_grain_model_collections(\n",
+    "                        [grain_model_collection, grain_model_collection_folder]\n",
+    "                    )\n",
+    "            else:\n",
+    "                print(\n",
+    "                    f\"hash for folder {sample_type} matched previous, but could not locate\"\n",
+    "                    f\"saved data: {file_previous_loaded_data}\"\n",
+    "                )\n",
+    "        else:\n",
+    "            if not force_reload:\n",
+    "                print(\n",
+    "                    f\"folder {sample_type} hash has changed since last load, loading the data from the topostats files\"\n",
+    "                )\n",
+    "            else:\n",
+    "                print(f\"forcing reload, loading the data from the topostats files for folder {sample_type}\")\n",
+    "\n",
+    "            grain_model_collection_folder = load_grain_models_from_topo_files(\n",
+    "                topo_files=list(file_paths_and_hashes_topostats.keys()),\n",
+    "                df_grain_stats=df_grain_stats,\n",
+    "                bbox_padding=bbox_padding,\n",
+    "                sample_type=sample_type,\n",
+    "            )\n",
+    "\n",
+    "            print(\n",
+    "                \"loaded topostats file data into grain model collection.\"\n",
+    "                \"Saving loaded data to .pkl file and saving hash.\"\n",
+    "            )\n",
+    "\n",
+    "            # after loading all the grains for the folder, save the model to a pickle and save the hash\n",
+    "            # for the folder\n",
+    "            file_to_save = dir_loaded_datasets / f\"{sample_type}.pkl\"\n",
+    "            with open(file_to_save, \"wb\") as f:\n",
+    "                pickle.dump(grain_model_collection_folder, f)\n",
+    "            # save the hash for the folder\n",
+    "            with open(previous_hash_file, \"w\") as f:\n",
+    "                f.write(folder_hash)\n",
+    "\n",
+    "            # combine the grain model collection for this folder with the main grain model collection\n",
+    "            grain_model_collection = combine_grain_model_collections(\n",
+    "                [grain_model_collection, grain_model_collection_folder]\n",
+    "            )\n",
+    "\n",
+    "\n",
+    "grain_model_collection = construct_grains_dictionary_from_topostats_files(bbox_padding=1)\n",
+    "print(grain_model_collection)"
+   ]
   }
  ],
  "metadata": {
