Fix data directory issues & get hashing working

--- a/picoz-damage-analysis.ipynb
+++ b/picoz-damage-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0",
    "metadata": {},
    "outputs": [],
@@ -73,9 +73,9 @@
     "print(f\"found {len(topo_files)} topo files\")\n",
     "\n",
     "# Load the corresponding statistics csv file\n",
-    "csv_grain_stats = dir_processed_data / \"grain_statistics.csv\"\n",
+    "csv_grain_stats: Path = dir_processed_data / \"grain_statistics.csv\"\n",
     "assert csv_grain_stats.exists(), f\"could not find grain stats csv at {csv_grain_stats}\"\n",
-    "df_grain_stats = pd.read_csv(csv_grain_stats)\n",
+    "df_grain_stats: pd.DataFrame = pd.read_csv(csv_grain_stats)\n",
     "print(f\"grain stats columns: {df_grain_stats.columns}\")\n",
     "\n",
     "# convert some columns to nanometres\n",
@@ -159,7 +159,7 @@
     "    smallest_bounding_area: float\n",
     "    total_contour_length: float\n",
     "    num_crossings: int\n",
-    "    molecule_data: dict[int, dict[str, npt.NDArray[np.float64]]]\n",
+    "    molecule_data: dict[int, dict[str, npt.NDArray[np.float64] | None | bool]]\n",
     "    added_left: int\n",
     "    added_top: int\n",
     "    padding: int\n",
@@ -235,7 +235,9 @@
     "    loadscans = LoadScans(img_paths=topo_files, channel=\"dummy\")\n",
     "    loadscans.get_data()\n",
     "    loadscans_img_dict = loadscans.img_dict\n",
+    "    global_grain_index = 0\n",
     "    for filename, file_data in loadscans_img_dict.items():\n",
+    "        print(f\"processing file {filename}\")\n",
     "        df_grain_stats_image = df_grain_stats[df_grain_stats[\"image\"] == filename]\n",
     "        full_image = file_data[\"image\"]\n",
     "        full_mask = file_data[\"grain_tensors\"][\"above\"]\n",
@@ -247,7 +249,13 @@
     "            nodestats_data = None\n",
     "        for current_grain_id_str, grain_ordered_trace_data in ordered_trace_data.items():\n",
     "            grain_id = int(re.sub(r\"grain_\", \"\", current_grain_id_str))\n",
+    "            print(f\"- processing grain {grain_id}\")\n",
     "            df_grain_stats_grain = df_grain_stats_image[df_grain_stats_image[\"grain_number\"] == grain_id]\n",
+    "            # check the grain stats dataframe for this grain has exactly one row\n",
+    "            if len(df_grain_stats_grain) == 0:\n",
+    "                print(f\"no grain stats csv entry found for grain {grain_id} in image {filename}. skipping grain.\")\n",
+    "                continue\n",
+    "\n",
     "            # get the irradiation dose from the folder path in the form \"{dose_percentage}_percent_damage\"\n",
     "            if \"Controls\" in sample_type:\n",
     "                dose_percentage = 0\n",
@@ -257,13 +265,17 @@
     "                    dose_percentage = int(dose_percentage_match.group(1))\n",
     "                else:\n",
     "                    raise ValueError(f\"could not extract dose percentage from folder path {sample_type}\")\n",
-    "            smallest_bounding_area = df_grain_stats_grain[\"smallest_bounding_area\"].values[0]\n",
+    "            try:\n",
+    "                smallest_bounding_area = df_grain_stats_grain[\"smallest_bounding_area\"].values[0]\n",
+    "            except Exception as e:\n",
+    "                print(df_grain_stats_grain)\n",
     "            aspect_ratio = df_grain_stats_grain[\"aspect_ratio\"].values[0]\n",
     "            total_contour_length = df_grain_stats_grain[\"total_contour_length\"].values[0]\n",
     "            num_crossings = df_grain_stats_grain[\"num_crossings\"].values[0]\n",
     "\n",
     "            all_molecule_data = {}\n",
     "            for current_molecule_id_str, molecule_ordered_trace_data in grain_ordered_trace_data.items():\n",
+    "                print(f\"-- processing molecule {current_molecule_id_str}\")\n",
     "                molecule_data = {}\n",
     "                molecule_id = int(re.sub(r\"mol_\", \"\", current_molecule_id_str))\n",
     "                ordered_coords = molecule_ordered_trace_data[\"ordered_coords\"]\n",
@@ -275,12 +287,25 @@
     "                splining_coords = file_data[\"splining\"][\"above\"][current_grain_id_str][current_molecule_id_str][\n",
     "                    \"spline_coords\"\n",
     "                ]\n",
-    "                curvatures = file_data[\"grain_curvature_stats\"][\"above\"][current_grain_id_str][current_molecule_id_str]\n",
+    "                try:\n",
+    "                    curvatures = file_data[\"grain_curvature_stats\"][\"above\"][current_grain_id_str][\n",
+    "                        current_molecule_id_str\n",
+    "                    ]\n",
+    "                except KeyError:\n",
+    "                    print(\n",
+    "                        f\"could not find curvature data for grain {current_grain_id_str}\"\n",
+    "                        f\"molecule {current_molecule_id_str}), setting to None. file keys: {list(file_data.keys())}\"\n",
+    "                    )\n",
+    "                    curvatures = None\n",
     "                molecule_data[\"curvatures\"] = curvatures\n",
     "\n",
     "                # bbox will be the same for all molecules so this is okay\n",
     "                bbox_square = make_bounding_box_square(\n",
-    "                    crop_min_row=bbox[0], crop_min_col=bbox[1], crop_max_row=bbox[2], crop_max_col=bbox[3]\n",
+    "                    crop_min_row=bbox[0],\n",
+    "                    crop_min_col=bbox[1],\n",
+    "                    crop_max_row=bbox[2],\n",
+    "                    crop_max_col=bbox[3],\n",
+    "                    image_shape=full_image.shape,\n",
     "                )\n",
     "                bbox_padded = pad_bounding_box_cutting_off_at_image_bounds(\n",
     "                    crop_min_row=bbox_square[0],\n",
@@ -335,7 +360,7 @@
     "            all_node_coords_array = np.array(all_node_coords)\n",
     "\n",
     "            grain_model = GrainModel(\n",
-    "                grain_id=grain_id,\n",
+    "                grain_id=global_grain_index,\n",
     "                filename=filename,\n",
     "                pixel_to_nm_scaling=pixel_to_nm_scaling,\n",
     "                folder=str(sample_type),\n",
@@ -356,6 +381,7 @@
     "            )\n",
     "\n",
     "            grain_model_collection.add_grain(grain_model)\n",
+    "            global_grain_index += 1\n",
     "    return grain_model_collection"
    ]
   },
@@ -367,6 +393,7 @@
    "outputs": [],
    "source": [
     "# Extract the grains from the topostats files\n",
+    "\n",
     "\n",
     "def construct_grains_dictionary_from_topostats_files(\n",
     "    bbox_padding: int, force_reload: bool = False\n",
@@ -385,7 +412,8 @@
     "    print(unique_file_folder_combinations_grouped.groups.keys())\n",
     "\n",
     "    for local_folder, group in unique_file_folder_combinations_grouped:\n",
-    "        sample_type = local_folder.replace(\"../all_data/\", \"\")\n",
+    "        sample_type = local_folder.replace(\"../all_data/\", \"\").replace(\"../test_subset_data/\", \"\")\n",
+    "        dir_loaded_sample_type = dir_loaded_datasets / sample_type\n",
     "        print(f\"checking folder {sample_type} with {len(group)} files\")\n",
     "        print(f\"calculating hashes for topostats files...\")\n",
     "        file_paths_and_hashes_topostats: dict[Path, str] = {}\n",
@@ -394,7 +422,10 @@
     "            filename = row[\"image\"]\n",
     "            basename = row[\"basename\"]\n",
     "            # reconstruct the path to the file using the basename, image name and structure of directories.\n",
-    "            dir_topo_file = Path(str(basename).replace(\"../all_data/\", \"\"))\n",
+    "            if \"all_data\" in basename:\n",
+    "                dir_topo_file = Path(str(basename).replace(\"../all_data/\", \"\"))\n",
+    "            if \"test_subset_data\" in basename:\n",
+    "                dir_topo_file = Path(str(basename).replace(\"../test_subset_data/\", \"\"))\n",
     "            dir_topo_file = dir_processed_data / dir_topo_file / \"processed\"\n",
     "            assert dir_topo_file.exists(), f\"could not find folder at {dir_topo_file}\"\n",
     "            file_topostats = dir_topo_file / f\"{filename}.topostats\"\n",
@@ -409,7 +440,8 @@
     "        folder_hash = sha256(combined_hash_string.encode()).hexdigest()\n",
     "\n",
     "        # load the previous hash from text file if it exists\n",
-    "        previous_hash_file = dir_results / f\"{local_folder}_hash.txt\"\n",
+    "        previous_hash_file = dir_loaded_sample_type / \"hash.txt\"\n",
+    "        print(f\"checking previous hash for folder {sample_type} at {previous_hash_file}\")\n",
     "        previous_hash = None\n",
     "        if previous_hash_file.exists():\n",
     "            previous_hash = previous_hash_file.read_text()\n",
@@ -421,12 +453,12 @@
     "        if previous_hash == folder_hash and not force_reload:\n",
     "            # check if the saved data for this folder exists and if it does, load it instead of loading the data\n",
     "            # from the topostats files\n",
-    "            file_previous_loaded_data = dir_loaded_datasets / f\"{local_folder}.pkl\"\n",
+    "            file_previous_loaded_data = dir_loaded_sample_type / f\"{sample_type}.pkl\"\n",
     "            if file_previous_loaded_data.exists():\n",
     "                print(\n",
     "                    f\"folder {sample_type} has not changed since last load, skipping loading it and using previous saved data\"\n",
     "                )\n",
-    "                with open(dir_loaded_datasets / f\"{sample_type}.pkl\", \"rb\") as f:\n",
+    "                with open(file_previous_loaded_data, \"rb\") as f:\n",
     "                    grain_model_collection_folder: GrainModelCollection = pickle.load(f)\n",
     "                    # Combine the grain model collection for this folder with the main grain model collection\n",
     "                    grain_model_collection = combine_grain_model_collections(\n",
@@ -459,10 +491,14 @@
     "\n",
     "            # after loading all the grains for the folder, save the model to a pickle and save the hash\n",
     "            # for the folder\n",
-    "            file_to_save = dir_loaded_datasets / f\"{sample_type}.pkl\"\n",
+    "            file_to_save = dir_loaded_sample_type / f\"data.pkl\"\n",
+    "            # ensure the parent folder is created\n",
+    "            file_to_save.parent.mkdir(parents=True, exist_ok=True)\n",
     "            with open(file_to_save, \"wb\") as f:\n",
     "                pickle.dump(grain_model_collection_folder, f)\n",
     "            # save the hash for the folder\n",
+    "            print(f\"saving hash for folder {sample_type} to {previous_hash_file}\")\n",
+    "            previous_hash_file.parent.mkdir(parents=True, exist_ok=True)\n",
     "            with open(previous_hash_file, \"w\") as f:\n",
     "                f.write(folder_hash)\n",
     "\n",
@@ -493,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
