Fix loading and hashing of data and retrieval of curvature information

--- a/picoz-damage-analysis.ipynb
+++ b/picoz-damage-analysis.ipynb
@@ -148,7 +148,8 @@
     "\n",
     "\n",
     "class GrainModel(BaseDamageAnalysis):\n",
-    "    grain_id: int\n",
+    "    global_grain_id: int | None = None\n",
+    "    file_grain_id: int\n",
     "    filename: str\n",
     "    pixel_to_nm_scaling: float\n",
     "    folder: str\n",
@@ -159,7 +160,7 @@
     "    smallest_bounding_area: float\n",
     "    total_contour_length: float\n",
     "    num_crossings: int\n",
-    "    molecule_data: dict[int, dict[str, npt.NDArray[np.float64] | None | bool]]\n",
+    "    molecule_data: dict[int, dict]\n",
     "    added_left: int\n",
     "    added_top: int\n",
     "    padding: int\n",
@@ -170,6 +171,16 @@
     "\n",
     "class GrainModelCollection(BaseDamageAnalysis):\n",
     "    grains: dict[int, GrainModel]\n",
+    "    current_global_grain_id: int = 0\n",
+    "\n",
+    "    # pretty print\n",
+    "    def __str__(self) -> str:\n",
+    "        grain_indexes = range(self.current_global_grain_id)\n",
+    "        missing_grain_indexes = [index for index in grain_indexes if index not in self.grains]\n",
+    "        return (\n",
+    "            f\"GrainModelCollection with {len(self.grains)} grains, with {len(missing_grain_indexes)} \"\n",
+    "            f\"omitted grains: {missing_grain_indexes}\"\n",
+    "        )\n",
     "\n",
     "    def __getitem__(self, key: int) -> GrainModel:\n",
     "        return self.grains[key]\n",
@@ -196,25 +207,34 @@
     "        return self.grains.get(key, default)\n",
     "\n",
     "    def add_grain(self, grain: GrainModel) -> None:\n",
-    "        # Check if the grain ID already exists in the collection\n",
-    "        if grain.grain_id in self.grains:\n",
-    "            raise ValueError(f\"Grain with ID {grain.grain_id} already exists in the collection.\")\n",
-    "        self.grains[grain.grain_id] = grain\n",
+    "        # note: a grain might already have a global grain id if it came from another collection, but we can\n",
+    "        # just overwrite it.\n",
+    "        grain.global_grain_id = self.current_global_grain_id\n",
+    "        self.grains[self.current_global_grain_id] = grain\n",
+    "        self.current_global_grain_id += 1\n",
     "\n",
-    "    def remove_grain(self, grain_id: int) -> None:\n",
-    "        if grain_id not in self.grains:\n",
-    "            raise KeyError(f\"Grain with ID {grain_id} does not exist in the collection.\")\n",
-    "        del self.grains[grain_id]\n",
+    "    def remove_grain(self, global_grain_id: int) -> None:\n",
+    "        if global_grain_id not in self.grains:\n",
+    "            raise KeyError(f\"grain with global id {global_grain_id} not found in collection, cannot remove\")\n",
+    "        del self.grains[global_grain_id]\n",
     "\n",
     "\n",
     "def combine_grain_model_collections(collections: list[GrainModelCollection]) -> GrainModelCollection:\n",
     "    combined_collection = GrainModelCollection(grains={})\n",
     "    for collection in collections:\n",
-    "        for grain_id, grain in collection.items():\n",
-    "            if grain_id in combined_collection:\n",
-    "                raise ValueError(f\"Duplicate grain ID {grain_id} found in multiple collections.\")\n",
+    "        for grain in collection.values():\n",
     "            combined_collection.add_grain(grain)\n",
-    "    return combined_collection"
+    "    return combined_collection\n",
+    "\n",
+    "\n",
+    "def get_dose_from_sample_type(sample_type: str) -> float:\n",
+    "    if \"control\" in sample_type.lower():\n",
+    "        return 0.0\n",
+    "    match = re.search(r\"(\\d+)_percent_damage\", sample_type)\n",
+    "    if match:\n",
+    "        return float(match.group(1))\n",
+    "    else:\n",
+    "        raise ValueError(f\"Could not extract dose from sample type: {sample_type}\")"
    ]
   },
   {
@@ -235,44 +255,79 @@
     "    loadscans = LoadScans(img_paths=topo_files, channel=\"dummy\")\n",
     "    loadscans.get_data()\n",
     "    loadscans_img_dict = loadscans.img_dict\n",
-    "    global_grain_index = 0\n",
-    "    for filename, file_data in loadscans_img_dict.items():\n",
-    "        print(f\"processing file {filename}\")\n",
-    "        df_grain_stats_image = df_grain_stats[df_grain_stats[\"image\"] == filename]\n",
+    "\n",
+    "    # Group the dataframe by image, since we will want to load all the grains from each image at once to avoid loading\n",
+    "    # the same image multiple times\n",
+    "\n",
+    "    unique_dir_file_combinations: set = set(zip(df_grain_stats[\"basename\"], df_grain_stats[\"image\"]))\n",
+    "\n",
+    "    print(f\"unique directory and file combinations: {unique_dir_file_combinations}\")\n",
+    "\n",
+    "    for basename, filename in unique_dir_file_combinations:\n",
+    "        print(f\"extracting data for file {filename} in folder {basename}\")\n",
+    "        # locate the corresponding row in the dataframe\n",
+    "        df_grain_stats_image = df_grain_stats[\n",
+    "            (df_grain_stats[\"image\"] == filename) & (df_grain_stats[\"basename\"] == basename)\n",
+    "        ]\n",
+    "        if len(df_grain_stats_image) == 0:\n",
+    "            raise ValueError(\n",
+    "                f\"could not find any rows in the grain stats dataframe for image {filename} and\"\n",
+    "                f\"basename {basename}. this should not happen, debug this!\"\n",
+    "            )\n",
+    "\n",
+    "        # load the corresponding image file\n",
+    "        try:\n",
+    "            file_data = loadscans_img_dict[filename]\n",
+    "        except KeyError:\n",
+    "            print(f\"keys: {list(loadscans_img_dict.keys())}\")\n",
+    "            raise KeyError(f\"could not find file data for image {filename} in loaded scans. debug this!\")\n",
+    "\n",
     "        full_image = file_data[\"image\"]\n",
     "        full_mask = file_data[\"grain_tensors\"][\"above\"]\n",
     "        pixel_to_nm_scaling = file_data[\"pixel_to_nm_scaling\"]\n",
     "        ordered_trace_data = file_data[\"ordered_traces\"][\"above\"]\n",
+    "\n",
+    "        # Grab nodestats data\n",
     "        try:\n",
     "            nodestats_data = file_data[\"nodestats\"][\"above\"][\"stats\"]\n",
     "        except KeyError:\n",
     "            nodestats_data = None\n",
-    "        for current_grain_id_str, grain_ordered_trace_data in ordered_trace_data.items():\n",
-    "            grain_id = int(re.sub(r\"grain_\", \"\", current_grain_id_str))\n",
-    "            print(f\"- processing grain {grain_id}\")\n",
-    "            df_grain_stats_grain = df_grain_stats_image[df_grain_stats_image[\"grain_number\"] == grain_id]\n",
-    "            # check the grain stats dataframe for this grain has exactly one row\n",
-    "            if len(df_grain_stats_grain) == 0:\n",
-    "                print(f\"no grain stats csv entry found for grain {grain_id} in image {filename}. skipping grain.\")\n",
-    "                continue\n",
     "\n",
-    "            # get the irradiation dose from the folder path in the form \"{dose_percentage}_percent_damage\"\n",
-    "            if \"Controls\" in sample_type:\n",
-    "                dose_percentage = 0\n",
-    "            else:\n",
-    "                dose_percentage_match = re.search(r\"(\\d+)_percent_damage\", str(sample_type))\n",
-    "                if dose_percentage_match:\n",
-    "                    dose_percentage = int(dose_percentage_match.group(1))\n",
-    "                else:\n",
-    "                    raise ValueError(f\"could not extract dose percentage from folder path {sample_type}\")\n",
-    "            try:\n",
-    "                smallest_bounding_area = df_grain_stats_grain[\"smallest_bounding_area\"].values[0]\n",
-    "            except Exception as e:\n",
-    "                print(df_grain_stats_grain)\n",
+    "        # grab individual grain data, based on each row of the dataframe\n",
+    "\n",
+    "        # grab the grain indexes (local) ie, 0-N for the file\n",
+    "        grain_indexes_from_df = df_grain_stats_image[\"grain_number\"].unique()\n",
+    "        grain_indexes_from_file = {int(grain_id.replace(\"grain_\", \"\")) for grain_id in ordered_trace_data.keys()}\n",
+    "\n",
+    "        if not set(grain_indexes_from_df) == grain_indexes_from_file:\n",
+    "            print(\n",
+    "                f\"WARN: grain indexes from dataframe and file mismatch. extra indexes in dataframe: \"\n",
+    "                f\"{set(grain_indexes_from_df) - grain_indexes_from_file} extra indexes in \"\n",
+    "                f\"file: {grain_indexes_from_file - set(grain_indexes_from_df)}\"\n",
+    "            )\n",
+    "\n",
+    "        # Now we can confidently grab the grain data based on the dataframe\n",
+    "        for grain_index in grain_indexes_from_df:\n",
+    "            grain_id_str = f\"grain_{grain_index}\"\n",
+    "            if grain_id_str not in ordered_trace_data:\n",
+    "                print(\n",
+    "                    f\"WARN: grain id {grain_id_str} from dataframe not found in file data. THIS SHOULD NOT HAPPEN, DEBUG THIS!\"\n",
+    "                )\n",
+    "                continue\n",
+    "            grain_ordered_trace_data = ordered_trace_data[grain_id_str]\n",
+    "            df_grain_stats_grain = df_grain_stats_image[df_grain_stats_image[\"grain_number\"] == grain_index]\n",
+    "            assert (\n",
+    "                len(df_grain_stats_grain) == 1\n",
+    "            ), f\"expected exactly one row in the grain stats dataframe for grain {grain_index} in\"\n",
+    "            f\"image {filename}, but found {len(df_grain_stats_grain)}. DEBUG THIS!\"\n",
+    "\n",
+    "            dose_percentage = get_dose_from_sample_type(sample_type)\n",
     "            aspect_ratio = df_grain_stats_grain[\"aspect_ratio\"].values[0]\n",
     "            total_contour_length = df_grain_stats_grain[\"total_contour_length\"].values[0]\n",
     "            num_crossings = df_grain_stats_grain[\"num_crossings\"].values[0]\n",
+    "            smallest_bounding_area = df_grain_stats_grain[\"smallest_bounding_area\"].values[0]\n",
     "\n",
+    "            # get the molecule data\n",
     "            all_molecule_data = {}\n",
     "            for current_molecule_id_str, molecule_ordered_trace_data in grain_ordered_trace_data.items():\n",
     "                print(f\"-- processing molecule {current_molecule_id_str}\")\n",
@@ -284,20 +339,19 @@
     "                molecule_data[\"circular\"] = molecule_ordered_trace_data[\"mol_stats\"][\"circular\"]\n",
     "                bbox = molecule_ordered_trace_data[\"bbox\"]\n",
     "\n",
-    "                splining_coords = file_data[\"splining\"][\"above\"][current_grain_id_str][current_molecule_id_str][\n",
-    "                    \"spline_coords\"\n",
-    "                ]\n",
+    "                splining_coords = file_data[\"splining\"][\"above\"][grain_id_str][current_molecule_id_str][\"spline_coords\"]\n",
     "                try:\n",
-    "                    curvatures = file_data[\"grain_curvature_stats\"][\"above\"][current_grain_id_str][\n",
-    "                        current_molecule_id_str\n",
-    "                    ]\n",
+    "                    curvature_data_grains = file_data[\"grain_curvature_stats\"][\"above\"][\"grains\"]\n",
+    "                    curvature_data_grain = curvature_data_grains[grain_id_str]\n",
+    "                    curvature_data_molecules = curvature_data_grain[\"molecules\"]\n",
+    "                    curvature_data_molecule = curvature_data_molecules[current_molecule_id_str]\n",
+    "                    molecule_data[\"curvature_data\"] = curvature_data_molecule\n",
     "                except KeyError:\n",
     "                    print(\n",
-    "                        f\"could not find curvature data for grain {current_grain_id_str}\"\n",
+    "                        f\"could not find curvature data for grain {grain_id_str}\"\n",
     "                        f\"molecule {current_molecule_id_str}), setting to None. file keys: {list(file_data.keys())}\"\n",
     "                    )\n",
-    "                    curvatures = None\n",
-    "                molecule_data[\"curvatures\"] = curvatures\n",
+    "                    molecule_data[\"curvature_data\"] = None\n",
     "\n",
     "                # bbox will be the same for all molecules so this is okay\n",
     "                bbox_square = make_bounding_box_square(\n",
@@ -344,7 +398,7 @@
     "            num_nodes: int = 0\n",
     "            if nodestats_data is not None:\n",
     "                try:\n",
-    "                    grain_nodestats_data = nodestats_data[current_grain_id_str]\n",
+    "                    grain_nodestats_data = nodestats_data[grain_id_str]\n",
     "                    num_nodes = len(grain_nodestats_data)\n",
     "                    for _node_index, node_data in grain_nodestats_data.items():\n",
     "                        node_coords = node_data[\"coords\"]\n",
@@ -360,7 +414,7 @@
     "            all_node_coords_array = np.array(all_node_coords)\n",
     "\n",
     "            grain_model = GrainModel(\n",
-    "                grain_id=global_grain_index,\n",
+    "                file_grain_id=grain_index,\n",
     "                filename=filename,\n",
     "                pixel_to_nm_scaling=pixel_to_nm_scaling,\n",
     "                folder=str(sample_type),\n",
@@ -381,7 +435,6 @@
     "            )\n",
     "\n",
     "            grain_model_collection.add_grain(grain_model)\n",
-    "            global_grain_index += 1\n",
     "    return grain_model_collection"
    ]
   },
@@ -395,7 +448,7 @@
     "# Extract the grains from the topostats files\n",
     "\n",
     "\n",
-    "def construct_grains_dictionary_from_topostats_files(\n",
+    "def construct_grains_collection_from_topostats_files(\n",
     "    bbox_padding: int, force_reload: bool = False\n",
     ") -> GrainModelCollection:\n",
     "    grain_model_collection = GrainModelCollection(grains={})\n",
@@ -411,6 +464,7 @@
     "    unique_file_folder_combinations_grouped = unique_file_folder_combinations.groupby(\"basename\")\n",
     "    print(unique_file_folder_combinations_grouped.groups.keys())\n",
     "\n",
+    "    # calculate a hash for each folder by combining the hashes of files in that folder.\n",
     "    for local_folder, group in unique_file_folder_combinations_grouped:\n",
     "        sample_type = local_folder.replace(\"../all_data/\", \"\").replace(\"../test_subset_data/\", \"\")\n",
     "        dir_loaded_sample_type = dir_loaded_datasets / sample_type\n",
@@ -453,7 +507,7 @@
     "        if previous_hash == folder_hash and not force_reload:\n",
     "            # check if the saved data for this folder exists and if it does, load it instead of loading the data\n",
     "            # from the topostats files\n",
-    "            file_previous_loaded_data = dir_loaded_sample_type / f\"{sample_type}.pkl\"\n",
+    "            file_previous_loaded_data = dir_loaded_sample_type / f\"data.pkl\"\n",
     "            if file_previous_loaded_data.exists():\n",
     "                print(\n",
     "                    f\"folder {sample_type} has not changed since last load, skipping loading it and using previous saved data\"\n",
@@ -466,7 +520,7 @@
     "                    )\n",
     "            else:\n",
     "                print(\n",
-    "                    f\"hash for folder {sample_type} matched previous, but could not locate\"\n",
+    "                    f\"hash for folder {sample_type} matched previous, but could not locate \"\n",
     "                    f\"saved data: {file_previous_loaded_data}\"\n",
     "                )\n",
     "        else:\n",
@@ -477,9 +531,11 @@
     "            else:\n",
     "                print(f\"forcing reload, loading the data from the topostats files for folder {sample_type}\")\n",
     "\n",
+    "            # calculate a subset of the dataframe for just this folder\n",
+    "            df_grain_stats_folder = df_grain_stats[df_grain_stats[\"basename\"] == local_folder]\n",
     "            grain_model_collection_folder = load_grain_models_from_topo_files(\n",
     "                topo_files=list(file_paths_and_hashes_topostats.keys()),\n",
-    "                df_grain_stats=df_grain_stats,\n",
+    "                df_grain_stats=df_grain_stats_folder,\n",
     "                bbox_padding=bbox_padding,\n",
     "                sample_type=sample_type,\n",
     "            )\n",
@@ -507,8 +563,10 @@
     "                [grain_model_collection, grain_model_collection_folder]\n",
     "            )\n",
     "\n",
+    "    return grain_model_collection\n",
     "\n",
-    "grain_model_collection = construct_grains_dictionary_from_topostats_files(bbox_padding=1)\n",
+    "\n",
+    "grain_model_collection = construct_grains_collection_from_topostats_files(bbox_padding=1)\n",
     "print(grain_model_collection)"
    ]
   }
